# grpc_test

./: .dockerignore  .gitignore  README.md
client/: README.md  __main__.py
cmd/: client.go  server.go
docker/: conan_test.Dockerfile  cxx_build_env.Dockerfile  grpc_build_env.Dockerfile  server.Dockerfile  web-ui.Dockerfile
istio/: auth.yaml  authservice-configmap-template-for-authn.yaml  certs.yaml  clean.sh  deploy.sh  filter.yaml  gateway.old  gateway.yaml  outbound.yaml  server.yaml  web-ui.yaml
istio/db/: README.md
istio/keycloak/: Deployment.yml
k8s/helmchart/: Chart.yaml  values.yaml
k8s/helmchart/templates/: app-external-authz-envoyfilter-sidecar.yaml  auth.yaml  authservice-configmap-template-for-authn.yaml  filter.yaml  gateway.yaml  server.yaml  web-ui.yaml
scripts/: clean.sh  clean_start.sh  install_istio.sh  install_tiller.sh  start_test_appserver.sh
test_appclient/: CMakeLists.txt  README.md  conanfile.py
test_appclient/cmake/: FindGRPC.cmake
test_appclient/conan/: README.md
test_appclient/src/: main.cpp
test_appserver/: CMakeLists.txt  README.md  conanfile.py
test_appserver/conan/: README.md
test_appserver/src/: main.cpp
tools/gen_cert/: README.md  dockerized_gen_cert.sh  gen_cert.sh
web-ui/: CMakeLists.txt  README.md  app.js  conanfile.py  index.html
web-ui/src/: main.cpp
